@@ -34,6 +34,11 @@ documents those changes that are of interest to users and administrators.
  -- Add sbatch "--batch" option to identify features required on batch node.
     For example "sbatch --batch=haswell ...".
  -- Add "BatchFeatures" field to output of "scontrol show job".
+ -- Add support for parenthesis in a job's constraint specification to group
+    like options together. For example
+    --constraint="[(knl&snc4&flat)*4&haswell*1]" might be used to specify that
+    four nodes with the features "knl", "snc4" and "flat" plus one node with
+    the feature "haswell" are required.
 
 * Changes in Slurm 17.11.1
 ==========================
